k8s/system/traefik/templates/traefik-forward-auth/middlewares.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sso
  namespace: traefik-system
  labels:
    app: traefik-forward-auth
spec:
  forwardAuth:
    address: http://traefik-forward-auth:4181
    authResponseHeaders:
      - X-Forwarded-User
