k8s/system/traefik/templates/traefik-forward-auth/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: traefik-system
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      containers:
      - image: thomseddon/traefik-forward-auth:2
        name: traefik-forward-auth
        ports:
        - containerPort: 4181
          protocol: TCP
        volumeMounts:
        - name: sso-secret
          mountPath: /config
      volumes:
      - name: sso-secret
        secret:
          secretName: traefik-forward-auth-sso
